--- a/index.html
+++ b/index.html
@@ -55,6 +55,46 @@
     	color: rgba(255,255,255,0.75);
     	text-shadow: 0 0 10px rgba(0,255,255,0.95);
 	}
+
+	.test666{
+		position: absolute;
+    	top: 0px;
+    	left: 0px;
+    	right: 0px;
+		bottom: 0px;
+		opacity: 1;
+		-webkit-transition: all .5s ease-in;
+		-moz-transition: all .5s ease-in;
+		transition: all .5s ease-in;
+
+	}
+
+	.test666.test{
+		opacity: 0;
+	}
+
+	.test666 .tishi{
+		color: rgba(255,255,255,0.75);
+		position: absolute;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		top: 0;
+		margin: auto;
+		max-width: 120px;
+		height: 50px;
+		line-height: 50px;
+		text-align: center;
+		font-weight: bolder;
+		font-size: 16px;
+		padding: 10px;
+		background: rgba(169, 169, 169, 0.5);
+		border-radius: 5px;
+	}
+
+
+
+	}
 </style>
 </head>
 <body>
@@ -223,18 +263,20 @@
 					const count = Object.keys(that.table).length
 					if (!count){
 
-						const make2 = $(`<div style="position: absolute;
-    top: 0px;
-    left: 0px;
-    right: 0px;
-	bottom: 0px;
-	background-color:red;"></div>`);
+						const make2 = $(`
+						<div class="test666">
+							<div class="tishi">没球了</div>
+						</div>
+						`);
 						
 						let $maskClone2 = make2.clone()
 						$maskClone2.append('????')
 						$(document.body).append($maskClone2);
 						setTimeout(function () {
-							$maskClone2.remove();
+							$($maskClone2).addClass('test');
+							setTimeout(function () {
+								$maskClone2.remove();
+							}, 1000);
 						}, 1000);
 
 
