--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 <link type="text/css" rel="stylesheet" href="css/tz.css"></link>
 <link type="text/css" rel="stylesheet" href="css/case.css"></link>
 <style>
+
+	body{
+		-webkit-user-select:none;
+    	-moz-user-select:none;
+    	-ms-user-select:none;
+    	user-select:none;
+	}
+
 	.test1{
 		position:absolute;
 		height:60px;
