--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		</td>
 	</tr>
 </table>
-<div id="detail" class="magictime puffIn">
+<div id="detail" class="magictime puffIn" style="display:none">
 	<div class="head">
 		<h1></h1>
 	</div>
