--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <script type="text/javascript">
 
 	var win = nw.Window.get();
-	win.showDevTools()
+	// win.showDevTools()
 
 </script>
 <script type="text/javascript" src="js/case.js"></script>
