--- a/index.html
+++ b/index.html
@@ -77,22 +77,18 @@
 		// 写入本地数据
 		set removeListLocalData(x) {
 
-			console.log(x)
-
-			const dataFile = path.resolve(dir, `./${this.a}至${this.b}.js`)
-
-			fs.writeFileSync(dataFile, JSON.stringify(this.removeList))
+			fs.writeFileSync(this.dataFileDir, JSON.stringify(this.removeList))
 
 			console.log(x)
 		}
 
 		// 读取本地数据
 		get removeListLocalData() {
-			const dataFiles = path.resolve(dir, `./${this.a}至${this.b}.js`)
-			if (!fs.existsSync(dataFiles))
-				fs.writeFileSync(dataFiles, '')
+			
+			if (!fs.existsSync(this.dataFileDir))
+				fs.writeFileSync(this.dataFileDir, '')
 
-			const fsinfo = fs.readFileSync(dataFiles)
+			const fsinfo = fs.readFileSync(this.dataFileDir)
 
 			try {
 				return JSON.parse(fsinfo.toString())
@@ -137,22 +133,27 @@
 		constructor({ startDate, endDate}){
 
 			// 计算时间天数
-			this.a = startDate
+			this.startDate = startDate
 
-			this.b = endDate
+			this.endDate = endDate
+
+			const dir = path.resolve(process.cwd(), '../dayinfo')
+			if (!fs.existsSync(dir))
+				fs.mkdirSync(dir)
+
+			this.dataFileDir = path.resolve(dir, `./${this.startDate}至${this.endDate}.js`)
 
 			// 剩余天数
-			this.aa = this.datedifference( +Date.now() , this.b)
+			this.aa = this.datedifference( +Date.now() , this.endDate)
 
 			// 过去天数
-			this.bb = this.datedifference(+Date.now(),this.a)
+			this.bb = this.datedifference(+Date.now(), this.startDate)
 
 			// 计算天数天数
-			this.cc = this.datedifference(this.a, this.b)
-
-			this.dayList = []
+			this.cc = this.datedifference(this.startDate, this.endDate)
 
 			// 遍历多个格子
+			this.dayList = []
 			for (let i = 1; i <= this.cc; i++) { this.dayList.push(i) }
 
 			// 获取已签到数据
@@ -217,7 +218,7 @@
 
 				}, 1000);
 			});
-			
+
 			$maskClone.append(initDetail({
 				fun : this.clickFun,
 				target : this
@@ -299,7 +300,7 @@
 			$('div.body table tr td p').text(`存储金额: ${priceSwitch(this.countAA)}`);
 
 			const startDate = document.getElementById('startDate')
-			startDate.innerText = `${this.a} 至 ${this.b}`
+			startDate.innerText = `${this.startDate} 至 ${this.endDate}`
 
 			const supplementCount = document.getElementById('supplementCount')
 			supplementCount.innerText = this.cc - this.aa - Object.keys(this.removeList).length
